WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151144
_WKRemoteObjectInterface should handle specifying allowed classes for reply block arguments
https://bugs.webkit.org/show_bug.cgi?id=151144
Summary
_WKRemoteObjectInterface should handle specifying allowed classes for reply b...
Anders Carlsson
Reported
2015-11-11 11:40:10 PST
_WKRemoteObjectInterface should handle specifying allowed classes for reply block arguments
Attachments
Patch
(10.27 KB, patch)
2015-11-11 11:41 PST
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-11-11 11:41:03 PST
Created
attachment 265311
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-11 11:42:51 PST
Attachment 265311
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:71: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2015-11-11 11:50:22 PST
Committed
r192319
: <
http://trac.webkit.org/changeset/192319
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug