_WKRemoteObjectInterface should handle specifying allowed classes for reply block arguments https://bugs.webkit.org/show_bug.cgi?id=151144

Reviewed by Tim Horton.

Source/WebKit2:

* Shared/API/Cocoa/_WKRemoteObjectInterface.h:
* Shared/API/Cocoa/_WKRemoteObjectInterface.mm:
(classesForSelectorArgument):
(-[_WKRemoteObjectInterface classesForSelector:argumentIndex:ofReply:]):
(-[_WKRemoteObjectInterface setClasses:forSelector:argumentIndex:ofReply:]):
(-[_WKRemoteObjectInterface classesForSelector:argumentIndex:]):
(-[_WKRemoteObjectInterface setClasses:forSelector:argumentIndex:]):

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.h:
(remoteObjectInterface):
* TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:
(TEST):
* TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistryPlugIn.mm:
(-[RemoteObjectRegistryPlugIn webProcessPlugIn:didCreateBrowserContextController:]):
(-[RemoteObjectRegistryPlugIn selectionAndClickInformationForClickAtPoint:completionHandler:]):

Canonical link: https://commits.webkit.org/169338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192319 268f45cc-cd09-0410-ab3c-d52691b4dbfc