Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistryPlugIn.mm
@@ -52,7 +52,7 @@
     _browserContextController = browserContextController;
     _plugInController = plugInController;
 
-    _WKRemoteObjectInterface *interface = [_WKRemoteObjectInterface remoteObjectInterfaceWithProtocol:@protocol(RemoteObjectProtocol)];
+    _WKRemoteObjectInterface *interface = remoteObjectInterface();
     [[_browserContextController _remoteObjectRegistry] registerExportedObject:self interface:interface];
 }
 
@@ -65,6 +65,15 @@
 - (void)sayHello:(NSString *)hello completionHandler:(void (^)(NSString *))completionHandler
 {
     completionHandler([NSString stringWithFormat:@"Your string was '%@'", hello]);
+}
+
+- (void)selectionAndClickInformationForClickAtPoint:(NSValue *)pointValue completionHandler:(void (^)(NSDictionary *))completionHandler
+{
+    NSDictionary *result = @{
+        @"URL" : [NSURL URLWithString:@"http://www.webkit.org/"],
+    };
+
+    completionHandler(result);
 }
 
 @end
